[package]
name = "huayensays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["sqlite"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenvy = "0.15"
database = { path = "database" }
