[package]
name = "huayensays"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["sqlite"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenvy = "0.15"
database = { path = "database" }
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-files = { version = "0.6.0" }
chrono = "0.4.0"
env_logger = "0.9.0"
